# llvm-example

./: .clang-format  .gitignore  CMakeLists.txt  ELFReader.cpp  GenerateIR.cpp  JitCompile.cpp  JittedSquareFunc.cpp  PlayGround.cpp  SquareFunc.cpp
include/: CreateObjectFile.hpp  DefaultTarget.hpp  SimpleJITCompiler.hpp  utils.h
